<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FF8A80"
        android:textSize="100sp"
        android:id="@+id/time"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FF8A80"
        android:textSize="50sp"
        android:id="@+id/date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FF8A80"
        android:textSize="40sp"
        android:id="@+id/theme" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonSet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#4CAF50"
        android:textSize="50sp"
        android:id="@+id/msg2"/>
</LinearLayout>